# n3rv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.rd  install_manifest.txt  pbcompile.sh
doxygen/: DEPENDANCIES  api.doxy  makedoc.sh
doxygen/breathe/source/: api.rst  api_httpservice.rst  api_logger.rst  api_service.rst  api_servicecontroller.rst  api_topology.rst  conf.py  faq.rst  howto_log.rst  howto_messages.rst  howto_ububuild.rst  howto_windev.rst  howtos.rst  index.rst  introduction.rst  ohierarchy.rst  resolution.rst  security.rst  service.rst  start.rst  start_buildinstall.rst  start_examples.rst  start_firstprog.rst  start_requirements.rst  tech_bindconnect.rst  tech_httpgateway.rst  tech_logging.rst  tech_messages.rst  tech_overview.rst  tech_polling.rst  tech_qhandler.rst  tech_resolution.rst  tech_send.rst  tech_serviceclass.rst  tech_servicecontroller.rst  tech_svcmainloop.rst  tech_terminology.rst  tech_topologies.rst  terminology.rst  topology.rst
doxygen/breathe/source/_static/css/: n3rv.css
doxygen/breathe/source/_templates/: layout.html
examples/: CMakeLists.txt
examples/algotrading/: broker.cpp  eval.cpp  exec  exec.cpp  launch.sh  moneyman  moneyman.cpp
examples/hello/: hello.cpp
examples/http-gateway/: http-gateway.cpp
examples/httpserv/: httpserv.cpp
examples/topology-fetch/: launch.sh  stop.sh  topology-fetch.cpp
examples/topology-load/: launch.sh  topology-load.cpp  topology.json
examples/workers-single-binary/: launch.sh  workers-single
examples/workers-single-binary/src/: test  test.cpp  workers-single.cpp
examples/workers-single-factorial/: launch.sh
examples/workers-single-factorial-hctl/: launch.sh  workers-single-factorial
examples/workers-single-factorial-hctl/src/: workers-single-factorial-hctl.cpp
examples/workers-single-factorial/src/: workers-single-factorial.cpp
resources/: n3rv_arch_example.xml
src/: n3rvcommon.cpp  n3rvcommon.hpp  n3rvhttpservice.cpp  n3rvhttpservice.hpp  n3rvlogger.cpp  n3rvlogger.hpp  n3rvproto.cpp  n3rvproto.hpp  n3rvproto.pb.cc  n3rvproto.proto  n3rvservice.cpp  n3rvservice.hpp  n3rvservicecontroller.cpp  n3rvservicecontroller.hpp  n3rvtopology.cpp  n3rvtopology.hpp  n3rvzmq.hpp
src/protocol/json/: protocol.cpp
src/protocol/protobuf/: n3rvproto.pb.cc  n3rvproto.pb.h  n3rvproto.proto  protocol.cpp
tests/: CMakeLists.txt  fixtures.hpp  test_httpservice.hpp  test_logger.hpp  test_lookups.hpp  test_messages.hpp  test_service.hpp  test_servicecontroller.hpp  test_topology_parsing.hpp  tests.cpp  testutils.hpp  topology.json
